--- a/list.yml
+++ b/list.yml
@@ -1,100 +1,105 @@
-entries:
-- name: kubernetes
-  type: platform
-  category: container orchestration
-  url: https://kubernetes.io/
-  description: |-
-    Kubernetes, also known as K8s, is an open-source system for automating deployment, scaling, and management of containerized applications.
-  examples:
-    - name: Basic Deployment 
-      manifest: |-	
-        apiVersion: apps/v1
-        kind: Deployment
-        metadata:
-          name: nginx-deployment
-          labels:
-            app: nginx
-        spec:
-          replicas: 3
-          selector:
-            matchLabels:
+apiVersion: v1
+kind: AwesomeList
+spec:
+  name: "awesome-declarative"
+  groupBy: "category"
+  entries:
+  - name: terraform
+    type: engine
+    category: infrastructure as code
+    url: https://www.terraform.io/
+    description: |-
+      Terraform is an open-source infrastructure as code software tool that provides a consistent CLI workflow to manage hundreds of cloud services. Terraform codifies cloud APIs into declarative configuration files.
+
+  - name: kubernetes
+    type: platform
+    category: container orchestration
+    url: https://kubernetes.io/
+    description: |-
+      Kubernetes, also known as K8s, is an open-source system for automating deployment, scaling, and management of containerized applications.
+    examples:
+      - name: Basic Deployment 
+        manifest: |-	
+          apiVersion: apps/v1
+          kind: Deployment
+          metadata:
+            name: nginx-deployment
+            labels:
               app: nginx
-          template:
-            metadata:
-              labels:
+          spec:
+            replicas: 3
+            selector:
+              matchLabels:
                 app: nginx
-            spec:
-              containers:
-              - name: nginx
-                image: nginx:1.7.9
-                ports:
-                - containerPort: 80
-      result: |-
-        A replica set of 3 pods will be deployed to Kubernetes. Each pod will run the nginx:1.7.9 container image exposing port 80 and be labeled with `app:nginx` for use in service abstraction.
+            template:
+              metadata:
+                labels:
+                  app: nginx
+              spec:
+                containers:
+                - name: nginx
+                  image: nginx:1.7.9
+                  ports:
+                  - containerPort: 80
+        result: |-
+          A replica set of 3 pods will be deployed to Kubernetes. Each pod will run the nginx:1.7.9 container image exposing port 80 and be labeled with `app:nginx` for use in service abstraction.
 
-- name: terraform
-  type: engine
-  category: infrastructure as code
-  url: https://www.terraform.io/
-  description: |-
-    Terraform is an open-source infrastructure as code software tool that provides a consistent CLI workflow to manage hundreds of cloud services. Terraform codifies cloud APIs into declarative configuration files.
+  - name: ferret
+    type: application
+    category: web scraping
+    url: https://github.com/MontFerret/ferret
+    description: |-
+      ferret is a web scraping system. It aims to simplify data extraction from the web for UI testing, machine learning, analytics and more.
+      ferret allows users to focus on the data. It abstracts away the technical details and complexity of underlying technologies using its own declarative language. It is extremely portable, extensible, and fast.
 
-- name: ferret
-  type: application
-  category: web scraping
-  url: https://github.com/MontFerret/ferret
-  description: |-
-    ferret is a web scraping system. It aims to simplify data extraction from the web for UI testing, machine learning, analytics and more.
-    ferret allows users to focus on the data. It abstracts away the technical details and complexity of underlying technologies using its own declarative language. It is extremely portable, extensible, and fast.
+  - name: mkdocs
+    type: application
+    category: website generator
+    url: https://www.mkdocs.org/
+    description: |-
+      MkDocs is a fast, simple and downright gorgeous static site generator that's geared towards building project documentation. Documentation source files are written in Markdown, and configured with a single YAML configuration file.
 
-- name: mkdocs
-  type: application
-  category: website generator
-  url: https://www.mkdocs.org/
-  description: |-
-    MkDocs is a fast, simple and downright gorgeous static site generator that's geared towards building project documentation. Documentation source files are written in Markdown, and configured with a single YAML configuration file.
+  - name: reagent
+    type: application
+    category: Testing
+    url: https://github.com/whytheplatypus/reagent
+    description: |-
+      A cli and library for declaring what how an API is expected to behave and checking that hypothesis.
 
-- name: reagent
-  type: application
-  category: Testing
-  url: https://github.com/whytheplatypus/reagent
-  description: |-
-    A cli and library for declaring what how an API is expected to behave and checking that hypothesis.
+  - name: editly
+    type: application
+    category: Multimedia
+    url: https://github.com/mifi/editly
+    description: |-
+      Editly is a tool and framework for declarative NLE (non-linear video editing) using Node.js and ffmpeg. Editly allows you to easily and programmatically create a video from a set of clips, images, audio and titles, with smooth transitions and music overlaid.
+      Editly has a simple CLI for quickly assembling a video from a set of clips or images, or you can use its more flexible JavaScript API.
 
-- name: editly
-  type: application
-  category: Multimedia
-  url: https://github.com/mifi/editly
-  description: |-
-    Editly is a tool and framework for declarative NLE (non-linear video editing) using Node.js and ffmpeg. Editly allows you to easily and programmatically create a video from a set of clips, images, audio and titles, with smooth transitions and music overlaid.
-    Editly has a simple CLI for quickly assembling a video from a set of clips or images, or you can use its more flexible JavaScript API.
+  - name: topicctl
+    type: application
+    category: Kafka
+    url: https://github.com/segmentio/topicctl
+    description: |-
+      A tool for easy, declarative management of Kafka topics. Includes the ability to "apply" topic changes from YAML as well as a repl for interactive exploration of brokers, topics, consumer groups, messages, and more.
 
-- name: topicctl
-  type: application
-  category: Kafka
-  url: https://github.com/segmentio/topicctl
-  description: |-
-    A tool for easy, declarative management of Kafka topics. Includes the ability to "apply" topic changes from YAML as well as a repl for interactive exploration of brokers, topics, consumer groups, messages, and more.
+  - name: ignition
+    type: application
+    category: OS Runtime Configuration
+    url: https://github.com/kinvolk/ignition
+    description: |-
+      Ignition is a low-level system configuration utility. The Ignition executable is part of the temporary initial root filesystem, the initramfs. When Ignition runs, it finds configuration data in a named location for a given environment, such as a file or URL, and applies it to the machine before switch_root is called to pivot to the machine's root filesystem.
+      Ignition uses a JSON configuration file to represent the set of changes to be made.
 
-- name: ignition
-  type: application
-  category: OS Runtime Configuration
-  url: https://github.com/kinvolk/ignition
-  description: |-
-    Ignition is a low-level system configuration utility. The Ignition executable is part of the temporary initial root filesystem, the initramfs. When Ignition runs, it finds configuration data in a named location for a given environment, such as a file or URL, and applies it to the machine before switch_root is called to pivot to the machine's root filesystem.
-    Ignition uses a JSON configuration file to represent the set of changes to be made.
-
-- name: Cuelang
-  type: engine
-  category: Configuration Runtime
-  url: https://cuelang.org
-  description: |-
-    Configure, unify, execute
-  examples: []
-  links:
-    - description: Cuelang tutorials
-      url: https://cuetorials.com/
-    - description: Commercial support and services for Cue
-      url: https://cuetorials.com/getting-help/#hofstadter-commercial-support-for-cue
-    - description: Slack
-      url: https://app.slack.com/client/TLUV4Q1ST/CLT3ULF6C
+  - name: Cuelang
+    type: engine
+    category: Configuration Runtime
+    url: https://cuelang.org
+    description: |-
+      Configure, unify, execute
+    examples: []
+    links:
+      - description: Cuelang tutorials
+        url: https://cuetorials.com/
+      - description: Commercial support and services for Cue
+        url: https://cuetorials.com/getting-help/#hofstadter-commercial-support-for-cue
+      - description: Slack
+        url: https://app.slack.com/client/TLUV4Q1ST/CLT3ULF6C
